--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.4.0'
-        compile 'io.reactivex:rxandroid:1.1.0'
-        compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
 }
