--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 }
